# ChangeLog for media-sound/murmur
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/murmur/ChangeLog,v 1.5 2008/03/15 17:47:55 drizzt Exp $

  15 Mar 2008; Timothy Redaelli <drizzt@gentoo.org> metadata.xml:
  Drop maintainership

*murmur-0.9.4-r1 (18 Apr 2007)

  18 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> +murmur-0.9.4-r1.ebuild:
  Revision bump:
  Add user and group murmur.
  Thanks to Jörg Habenicht for reporting wrt bug #171925.

  28 Feb 2007; Timothy Redaelli <drizzt@gentoo.org> murmur-0.9.4.ebuild:
  Add use pch (as suggested by X on comment 2 of bug #167428).
  Accept also qt with sqlite3 use (thanks to desowin wrt bug #166215).
  Remove unuseful dependencies.

  08 Feb 2007; Timothy Redaelli <drizzt@gentoo.org> murmur-0.9.4.ebuild:
  Fix speex depend thanks to Gorch wrt bug #165927

*murmur-0.9.4 (20 Jan 2007)

  20 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> +files/murmur.confd,
  +files/murmur.rc, +metadata.xml, +murmur-0.9.4.ebuild:
  New ebuild, mumble server (murmur) wrt bug #155517.
