@@ -1,12 +1,12 @@
-# where to look for config files
-MURMUR_CONFDIR=/etc/murmur
+# where to look for the config file
+MURMUR_CONF=/etc/murmur/murmur.ini
 
-# were to log
-MURMUR_LOGFILE=/var/log/murmur.log
+# where to look for the pid file
+MURMUR_PID=/var/run/murmur/murmur.pid
 
 # run as this user
 MURMUR_USER=murmur
 
 # HOME directory of MURMUR_USER
-# needs to be set for start-stop-daemon!
-MURMUR_HOMEDIR=/var/lib/murmur
+MURMUR_HOME=/var/lib/murmur
+
