@@ -5,4 +5,8 @@
 <longdescription lang="en">
 Mumble is a low-latency, high quality voice chat software primarily intended for use while gaming.
 </longdescription>
+<use>
+	<flag name='logrotate'>Use <pkg>app-admin/logrotate</pkg> for rotating
+		logs</flag>
+</use>
 </pkgmetadata>
